After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726696 - rtspsrc memleaks
rtspsrc memleaks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-19 10:30 UTC by Nicola
Modified: 2014-03-24 13:35 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2014-03-19 10:30:28 UTC
tested with today git

pipeline:

gst-launch-1.0 -v rtspsrc location=rtspt://admin:12345@192.168.2.220:554/PSIA/streaming/channels/201 debug=true ! rtph264depay ! avdec_h264 ! xvimagesink

valgrind reports:

==6770== 64 bytes in 1 blocks are definitely lost in loss record 3,309 of 4,845
==6770==    at 0x4C28730: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==6770==    by 0x4012FA4: dl_open_worker (in /usr/lib/ld-2.19.so)
==6770==    by 0x400E883: _dl_catch_error (in /usr/lib/ld-2.19.so)
==6770==    by 0x40123FA: _dl_open (in /usr/lib/ld-2.19.so)
==6770==    by 0x5B9502A: ??? (in /usr/lib/libdl-2.19.so)
==6770==    by 0x400E883: _dl_catch_error (in /usr/lib/ld-2.19.so)
==6770==    by 0x5B955DC: ??? (in /usr/lib/libdl-2.19.so)
==6770==    by 0x5B950C0: dlopen (in /usr/lib/libdl-2.19.so)
==6770==    by 0x5691890: g_module_open (in /usr/lib/libgmodule-2.0.so.0.3800.2)
==6770==    by 0x4EA6B34: gst_plugin_load_file (gstplugin.c:733)
==6770==    by 0x4EA7820: gst_plugin_load_by_name (gstplugin.c:1251)
==6770==    by 0x4EA81ED: gst_plugin_feature_load (gstpluginfeature.c:110)
==6770==    by 0x4E85236: gst_element_factory_create (gstelementfactory.c:353)
==6770==    by 0x85E9627: gst_rtsp_ext_list_get (gstrtspext.c:95)
==6770==    by 0x85DCA5D: gst_rtspsrc_init (gstrtspsrc.c:740)
==6770==    by 0x547015A: g_type_create_instance (in /usr/lib/libgobject-2.0.so.0.3800.2)
==6770==    by 0x5454604: ??? (in /usr/lib/libgobject-2.0.so.0.3800.2)
==6770==    by 0x54563FC: g_object_newv (in /usr/lib/libgobject-2.0.so.0.3800.2)
==6770==    by 0x4E85419: gst_element_factory_create (gstelementfactory.c:377)
==6770==    by 0x4E85590: gst_element_factory_make (gstelementfactory.c:446)


==6770== 766 (72 direct, 694 indirect) bytes in 1 blocks are definitely lost in loss record 4,763 of 4,845
==6770==    at 0x4C28730: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==6770==    by 0x58E1C80: g_malloc (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x58F781D: g_slice_alloc (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x4E7083E: gst_caps_new_empty (gstcaps.c:239)
==6770==    by 0x4E70A18: gst_caps_new_simple (gstcaps.c:312)
==6770==    by 0x85E120B: gst_rtspsrc_open (gstrtspsrc.c:1806)
==6770==    by 0x85E5834: gst_rtspsrc_thread (gstrtspsrc.c:7217)
==6770==    by 0x4EC78B8: gst_task_func (gsttask.c:319)
==6770==    by 0x5901975: ??? (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x5900FB4: ??? (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x5DA00A1: start_thread (in /usr/lib/libpthread-2.19.so)
==6770== 
==6770== 819 (32 direct, 787 indirect) bytes in 1 blocks are definitely lost in loss record 4,769 of 4,845
==6770==    at 0x4C28730: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==6770==    by 0x58E1C80: g_malloc (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x58F781D: g_slice_alloc (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x4EBA096: gst_structure_new_id_empty_with_size (gststructure.c:147)
==6770==    by 0x4EBC4EE: gst_structure_new_valist (gststructure.c:283)
==6770==    by 0x4E70A54: gst_caps_new_simple (gstcaps.c:315)
==6770==    by 0x85E120B: gst_rtspsrc_open (gstrtspsrc.c:1806)
==6770==    by 0x85E5834: gst_rtspsrc_thread (gstrtspsrc.c:7217)
==6770==    by 0x4EC78B8: gst_task_func (gsttask.c:319)
==6770==    by 0x5901975: ??? (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x5900FB4: ??? (in /usr/lib/libglib-2.0.so.0.3800.2)
==6770==    by 0x5DA00A1: start_thread (in /usr/lib/libpthread-2.19.so)
Comment 1 Wim Taymans 2014-03-24 13:35:55 UTC
The first leak is a false positive.

commit a4f6f963eca8ccbcac94d84599974dcdcec86daa
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Mon Mar 24 14:35:01 2014 +0100

    rtspsrc: free caps in ptmap array
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726696