rtspsrc: free caps in ptmap array

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726696